--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           cache-path: ~/github-search/node_modules
           override-ci-command: npm install
       - run: npm run lint
-  set-directory:
+  set_directory:
       steps:
         - run: cd github-search
   build:
@@ -24,5 +24,5 @@ jobs:
 workflows:
   lint_my_app:
     jobs:
-      - set-directory
+      - set_directory
       - lint
