--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,8 @@ jobs:
   set_directory:
     executor: node/default
     steps:
-      - run: pwd
+      - checkout
+      - run: ls
   build:
     docker: 
       - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
