--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
     executor: node/default
     steps:
       - checkout
-      - run: ls
+      - run: cd github-search && pwd
   build:
     docker: 
       - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
