--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,11 +4,11 @@ orbs:
   node: circleci/node@3.0.1
 
 jobs:
-  - set_directory
   lint:
     executor: node/default
     steps:
       - checkout
+      - run: cd github-search
       - node/install-packages:
           cache-path: ~/github-search/node_modules
           override-ci-command: npm install
@@ -16,7 +16,6 @@ jobs:
   set_directory:
     executor: node/default
     steps:
-      - checkout
       - run: cd github-search && pwd
   build:
     docker: 
