--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,11 @@ orbs:
 
 jobs:
   lint:
+    working_directory: ~/github-search
     executor: node/default
     steps:
       - checkout
       - node/install-packages:
-          - run: cd github-search
           cache-path: ~/github-search/node_modules
           override-ci-command: npm install
       - run: npm run lint
