--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,10 @@ jobs:
           app-dir: ~/project/github-search
           cache-path: node_modules
           override-ci-command: npm install
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
       - run: npm run lint
   build:
     docker: 
