--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           root: .
           paths:
             - .
-      - run: npm run lint
+      - run: cd github-search && npm run lint
   build:
     docker: 
       - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
