--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,17 +13,17 @@ jobs:
           app-dir: ~/project/github-search
           cache-path: node_modules
           override-ci-command: npm install
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
       - run: cd github-search && npm run lint
   build:
-    docker: 
-      - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
+    executor: node/default
     steps:
-      - checkout # check out the code in the project directory
-      - run: echo "hello world"
+      - checkout
+      - node/install-npm
+      - node/install-packages:
+          app-dir: ~/project/github-search
+          cache-path: node_modules
+          override-ci-command: npm install
+      - run: cd github-search && npm run build
 workflows:
   lint_my_app:
     jobs:
