--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "express": "4.17.1"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "engines": {
+      "node": "12.13.0"
+  }
 }
