--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "cd github-search && ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "cd github-search && npm install"
   },
   "private": true,
   "dependencies": {
