--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "express": "4.17.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@angular/cli": "10.0.5"
+  },
   "engines": {
       "node": "12.13.0"
   }
