--- a/package.json
+++ b/package.json
@@ -15,7 +15,25 @@
     "express": "4.17.1"
   },
   "devDependencies": {
-    "@angular/cli": "10.0.5"
+    "@angular-devkit/build-angular": "0.1000.5",
+    "@angular/cli": "10.0.5",
+    "@angular/compiler-cli": "10.0.8",
+    "@angular/language-service": "10.0.8",
+    "@types/node": "12.11.1",
+    "@types/jasmine": "3.3.8",
+    "@types/jasminewd2": "2.0.3",
+    "codelyzer": "6.0.0",
+    "jasmine-core": "3.5.0",
+    "jasmine-spec-reporter": "5.0.0",
+    "karma": "5.0.0",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.2",
+    "karma-jasmine": "3.3.0",
+    "karma-jasmine-html-reporter": "1.5.0",
+    "protractor": "7.0.0",
+    "ts-node": "7.0.0",
+    "tslint": "6.1.0",
+    "typescript": "3.9.7"
   },
   "engines": {
     "node": "12.13.0"
