--- a/package.json
+++ b/package.json
@@ -1,18 +1,32 @@
 {
-  "name": "github-ci-example",
+  "name": "github-search",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "cd github-search && ng build --prod",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "cd github-search && npm install"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "express": "4.17.1"
+    "@angular/animations": "10.0.8",
+    "@angular/cdk": "^10.1.2",
+    "@angular/common": "10.0.8",
+    "@angular/compiler": "10.0.8",
+    "@angular/core": "10.0.8",
+    "@angular/forms": "10.0.8",
+    "@angular/material": "^10.1.2",
+    "@angular/platform-browser": "10.0.8",
+    "@angular/platform-browser-dynamic": "10.0.8",
+    "@angular/router": "10.0.8",
+    "@ngrx/effects": "9.2.0",
+    "@ngrx/store": "9.2.0",
+    "@ngrx/store-devtools": "9.2.0",
+    "rxjs": "6.6.2",
+    "tslib": "2.0.0",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1000.5",
@@ -34,8 +48,5 @@
     "ts-node": "7.0.0",
     "tslint": "6.1.0",
     "typescript": "3.9.7"
-  },
-  "engines": {
-    "node": "12.13.0"
   }
 }
