add express to the package.json

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/effects": "9.2.0",
     "@ngrx/store": "9.2.0",
     "@ngrx/store-devtools": "9.2.0",
+    "express": "4.17.1",
     "rxjs": "6.6.2",
     "tslib": "2.0.0",
     "zone.js": "0.10.3"
